orcamento/style.css
@charset "UTF-8";

@media screen {
    *{
        padding: 0;
        margin: 0;
        font-family: Arial, Helvetica, sans-serif;
        font-size: 15px;
        font-weight: bold;
        color: rgb(87, 58, 33);
        background-color: #c8b68b;
    }
    .header{
        display: flex;
        flex-flow: row wrap;
        padding: 10px;
        justify-content: center;
        /* max-width: 800px; */
    }
    .preco{
        display: none;
    }
    #spedit{
        display: none;
    }
    #spcodigo{
        display: none;
    }
    #spprint{
        display: none;
    }
    #spsave{
        display: inline-block;
    }
    section{
        display: flex;
        flex-flow: column;
        justify-content: center;
        row-gap: 3px;
    }
    button{
        margin: 0px 0;
        border-radius: 10px;
        color: white;
        padding: 5px;
    }
    button#print{
        background-color: #3A7D44;
    }
    button#edit{
        background-color: #B8336A;
    }
    button#save{
        background-color: #1F5673;
    }
    div.top{
        height: 50px;
        width: 400px;
        text-align: center;
    }
    div.thead{
        padding: 0px 0px 0px 0px;
        display: none;
    }
    .thead, .tbuttons, .input{
        width: 100%;
    }
    .input{
        text-align: center;
    }
    .buttons{
        display: flex;
        flex-flow: row;
        gap: 65px;
        justify-content: center;
    }
    div.diacli{
        display: flex;
        flex-flow: row wrap;
        row-gap: 10px;
        text-align: center;
        justify-content: center;
    }
    div.itenstot{
        padding: 10px;
        display: flex;
        flex-flow: row wrap;
        row-gap: 10px;
        width: 100%;
        justify-content: center;
    }
    .dir{
        display: none;
    }
    .altquebra{
        height: 0px;
    }
    div#qnt{
        display: none;
        width: 220px;
        text-align: center;
    }
    div#tot{
        display: none;
        width: 220px;
        text-align: center;
    }
    div#divcliente{
        display: inline-block;
        width: 400px;
        text-align: "center";
    }
    div#divdia{
        display: inline-block;
        width: 400px;
        text-align: "center";
    }
    div#body{
        padding: 0;
    }
    div#lista{
        width: 800px;
    }
    .del{
        background-color: #E9190F;
        border-radius: 20px;
        width: 30px;
        color: white;
        padding: 0px;
    }
    .del:hover{
        background-color: brown;
    }
    input{
        height: 40px;
        background-color: #F2EEE3;
        border-radius: 10px;
    }
    table{
        /* border: 1px solid; */
        margin-left: auto;
        margin-right: auto;
    }
}

@media print{
    a{
        text-decoration: none;
    }
    /* td{
        border: 1px solid;
    } */
    *{
        background-color: white;
        color:black;
        border: 0px;
        margin: 0px;
        padding: 0px;
    }
    header{
        display: block;
        padding: 1px;
        font-size: 18px;
        position: fixed;
        top: 0;
        height: 0px;
    }
    table{
        font-size: 13px;
    }
    button{
        display: none;
    }
    hr {
        margin-top: 3px;
        height: 1px;
        background: transparent;
        width: 100%;
        border: none;
        border-top: solid 1px #aaa;
    }
    hr.quebra{
        page-break-after: always;
    }
    .altquebra{
        height: 93px;
    }
    div#qnt{
        display: inline-block;
        width: 250px;
    }
    div#tot{
        display: inline-block;
        width: 200px;
    }
    div#divcliente{
        display: inline-block;
        width: 500px;
        text-align: "center";
    }
    div#divdia{
        display: inline-block;
        width: 200px;
        text-align: "center";
    }
    .buttons{
        display: none;
    }

    div.top{
        text-align: center;
        padding: 2px;
    }
    div.thead{
        padding: 0;
        font-weight: bold;
    }
    div.input{
        display: none;
    }
    .inv{
        display: none;
    }
    .preco{
        display: block;
    }
}

